objects/sf_devops__Deployment__e.object
<CustomObject>
    <description>Platform Event for a Deployment</description>
    <fields>
        <fullName>sf_devops__Change_Bundle_Id__c</fullName>
        <description>The Change Bundle that was deployed</description>
        <label>Change Bundle Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf_devops__Deployment_Id__c</fullName>
        <description>The Deployment Id for this deployment in the target organization</description>
        <label>Deployment Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf_devops__Target_Stage_Id__c</fullName>
        <description>The Pipeline Stage these change where deployed to</description>
        <label>Target Stage Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf_devops__Work_Item_Id__c</fullName>
        <description>The Work Item that was deployed</description>
        <label>Work Item Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Deployment</label>
    <pluralLabel>Deployments</pluralLabel>
</CustomObject>